--- a/index.html
+++ b/index.html
@@ -23,9 +23,64 @@
 </head>
 
 <body>
+  <header>
+    <div class="content-wrapper">
+      <figure>
+        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
+
+      <div class="header-divider"></div>
+  
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target=_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+
+  </header>
+
+  <main>
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </div>
+    </section>
+
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        </div>
+
+        <div class="form"
+        <h3>Find out more</h3>
+        </div>
+
+      </div> <!--aside content wrapper ends -->
+    </aside>
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="social">
+          <div class="social-icons">
+            <p><a href="https://wwww.facebook.com/yoursite" target="blank"></a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="blank"></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="blank"></a></p>
+          </div>  <!-- end of social icons-->
+        </div>  <!-- end of social-->
+      </div>  <!--end of footer-content-->
+    </div>  <!--end of content-wrapper-->
+
+    <div class="copyright">
+    </div>
+  </footer>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
