contd-html-buildout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Retreat Unplugged!</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -38,12 +38,14 @@
         </ul>
       </nav>
     </div>
-
   </header>
 
   <main>
     <section class="hero-area">
       <div class="content-wrapper">
+        <figure>
+          <a href="bridge"><img src="img/jake-melara-30679-unsplash.jpg" alt="woman with ponytail crossing bridge"></a>
+        </figure>
         <h1>Retreat from the desk, return refreshed.</h1>
       </div>
     </section>
@@ -56,17 +58,45 @@
         </div>
 
         <div class="form"
-        <h3>Find out more</h3>
+          <h3>Find out more</h3><br>
+          <input type="text" name="name" value="email address"><br>
+          <input type="button" value="Download Itinerary">
         </div>
 
       </div> <!--aside content wrapper ends -->
     </aside>
+
+    <section>
+      <div class="content-wrapper">
+        <figure>
+          <a href="nature"><img src="img/rawpixel-800820-unsplash1.jpg" alt="Five people sitting in a circle on mats on the ground cooking an egg on a campstove."></a>
+        </figure>
+        <div class="amenities">
+          <h4>Have the work week you always dreamed of - without the bad wifi.</h4>
+          <div></div>  <!-- insert icons and text -->
+        </div>
+      </div>
+    </section>
   </main>
 
+  <section>
+    <div class="content-wrapper">
+      <h2>Be a better team in 5 days, like these.</h2>
+      <figure>
+        <a href="group"><img src="img/omar-lopez-296944-unsplash.jpg" alt="Group of 10 young women posing for photo in nature."></a>
+      </figure>
+      <h3>LaCrue Bottling Co. <br> October 2017</h3>
+    </div>
+  </section>
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
+        <div class="contact">
+          <h5>Contact</h5>
+          <address> 555.555.5555 <br> hello@unplugged.com</address>
+        </div>
         <div class="social">
+          <h5>Social</h5>
           <div class="social-icons">
             <p><a href="https://wwww.facebook.com/yoursite" target="blank"></a></p>
             <p><a href="https://www.twitter.com/yoursite" target="blank"></a></p>
@@ -77,6 +107,7 @@
     </div>  <!--end of content-wrapper-->
 
     <div class="copyright">
+      <p>Copyright 2019&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;Unplugged</p>
     </div>
   </footer>
 
