--- a/index.html
+++ b/index.html
@@ -58,36 +58,68 @@
         </div>
 
         <div class="form"
-          <h3>Find out more</h3><br>
-          <input type="text" name="name" value="email address"><br>
+          <h3>Find out more</h3><br><br>
+          <input type="text" name="name" value="email address">&nbsp;&nbsp;
           <input type="button" value="Download Itinerary">
         </div>
 
       </div> <!--aside content wrapper ends -->
     </aside>
 
-    <section>
+    <section class="features">
       <div class="content-wrapper">
         <figure>
           <a href="nature"><img src="img/rawpixel-800820-unsplash1.jpg" alt="Five people sitting in a circle on mats on the ground cooking an egg on a campstove."></a>
         </figure>
-        <div class="amenities">
           <h4>Have the work week you always dreamed of - without the bad wifi.</h4>
-          <div></div>  <!-- insert icons and text -->
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          <article> 
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+          </article> 
+
+          <article> 
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+          </article>  
+
+          <article>  
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+          </article> 
+          
+          <article> 
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+          </article>
+
+          <article> 
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+          </article>  <!-- insert icons and text -->
         </div>
       </div>
     </section>
   </main>
 
-  <section>
+  <section class="reviews">
     <div class="content-wrapper">
       <h2>Be a better team in 5 days, like these.</h2>
-      <figure>
-        <a href="group"><img src="img/omar-lopez-296944-unsplash.jpg" alt="Group of 10 young women posing for photo in nature."></a>
-      </figure>
-      <h3>LaCrue Bottling Co. <br> October 2017</h3>
+      <article>
+        <figure>
+          <a href="group"><img src="img/omar-lopez-296944-unsplash.jpg" alt="Group of 10 young women posing for photo in nature."></a>
+        </figure>
+
+        <div class="review-lacrue"
+          <h3>LaCrue Bottling Co. <br> October 2017</h3>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas congue quisque egestas diam in. Porttitor eget dolor morbi non arcu. Commodo odio aenean sed adipiscing. Non tellus orci ac auctor. Interdum posuere lorem ipsum dolor. Justo laoreet sit amet cursus sit amet dictum. Amet consectetur adipiscing elit duis tristique sollicitudin nibh sit. </p>
+        </div>
+      </article>
     </div>
   </section>
+
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
