contd-html-buildout

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+        <!--<a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>  -->
       </figure>
 
       <div class="header-divider"></div>
@@ -44,7 +44,7 @@
     <section class="hero-area">
       <div class="content-wrapper">
         <figure>
-          <a href="bridge"><img src="img/jake-melara-30679-unsplash.jpg" alt="woman with ponytail crossing bridge"></a>
+         <!--- <a href="bridge"><img src="img/jake-melara-30679-unsplash.jpg" alt="woman with ponytail crossing bridge"></a>  -->
         </figure>
         <h1>Retreat from the desk, return refreshed.</h1>
       </div>
@@ -57,8 +57,8 @@
           <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
         </div>
 
-        <div class="form"
-          <h3>Find out more</h3><br><br>
+        <div class="form">
+          <h3>Find out more</h3> 
           <input type="text" name="name" value="email address">&nbsp;&nbsp;
           <input type="button" value="Download Itinerary">
         </div>
@@ -69,7 +69,7 @@
     <section class="features">
       <div class="content-wrapper">
         <figure>
-          <a href="nature"><img src="img/rawpixel-800820-unsplash1.jpg" alt="Five people sitting in a circle on mats on the ground cooking an egg on a campstove."></a>
+        <!--   <a href="nature"><img src="img/rawpixel-800820-unsplash1.jpg" alt="Five people sitting in a circle on mats on the ground cooking an egg on a campstove."></a>  -->
         </figure>
           <h4>Have the work week you always dreamed of - without the bad wifi.</h4>
           <article>
@@ -109,11 +109,11 @@
       <h2>Be a better team in 5 days, like these.</h2>
       <article>
         <figure>
-          <a href="group"><img src="img/omar-lopez-296944-unsplash.jpg" alt="Group of 10 young women posing for photo in nature."></a>
+        <!--   <a href="group"><img src="img/omar-lopez-296944-unsplash.jpg" alt="Group of 10 young women posing for photo in nature."></a>  -->
         </figure>
 
-        <div class="review-lacrue"
-          <h3>LaCrue Bottling Co. <br> October 2017</h3>
+        <div class="review-lacrue">
+          <h3>LaCrue Bottling Co. October 2017</h3>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas congue quisque egestas diam in. Porttitor eget dolor morbi non arcu. Commodo odio aenean sed adipiscing. Non tellus orci ac auctor. Interdum posuere lorem ipsum dolor. Justo laoreet sit amet cursus sit amet dictum. Amet consectetur adipiscing elit duis tristique sollicitudin nibh sit. </p>
         </div>
       </article>
@@ -124,11 +124,11 @@
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact">
-          <h5>Contact</h5>
+          <h3>Contact</h3>
           <address> 555.555.5555 <br> hello@unplugged.com</address>
         </div>
         <div class="social">
-          <h5>Social</h5>
+          <h3>Social</h3>
           <div class="social-icons">
             <p><a href="https://wwww.facebook.com/yoursite" target="blank"></a></p>
             <p><a href="https://www.twitter.com/yoursite" target="blank"></a></p>
