--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About Retreat Unplugged!</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,9 +23,51 @@
 </head>
 
 <body>
+<header>
+    <div class="content-wrapper">
+      <figure>
+        <!--<a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>  -->
+      </figure>
+
+      <div class="header-divider"></div>
+  
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../index.html" target="_blank">Work</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+
+
+<footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h3>Contact</h3>
+          <address> 555.555.5555 <br> hello@unplugged.com</address>
+        </div>
+        <div class="social">
+          <h3>Social</h3>
+          <div class="social-icons">
+            <p><a href="https://wwww.facebook.com/yoursite" target="blank"></a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="blank"></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="blank"></a></p>
+          </div>  <!-- end of social icons-->
+        </div>  <!-- end of social-->
+      </div>  <!--end of footer-content-->
+    </div>  <!--end of content-wrapper-->
+
+    <div class="copyright">
+      <p>Copyright 2019&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;Unplugged</p>
+    </div>
+  </footer>
+
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
