--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About Retreat Unplugged!</title>
+  <title>About Unplugged!</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,13 +34,11 @@
       <nav>
         <ul>
           <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="../index.html" target="_blank">Work</a></li>
+          <li><a href="../index.html" target="_blank">Home</a></li>
         </ul>
       </nav>
     </div>
   </header>
-
-
 
 <footer>
     <div class="content-wrapper">
@@ -64,7 +62,6 @@
       <p>Copyright 2019&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;Unplugged</p>
     </div>
   </footer>
-
 
   <!-- Add your site or application content here -->
 
