--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <!--<a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>  -->
+        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a> 
       </figure>
 
       <div class="header-divider"></div>
@@ -34,7 +34,7 @@
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target=_blank">About</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
     </div>
