--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>FAQ Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,9 +23,75 @@
 </head>
 
 <body>
+  <header>
+    <div class="content-wrapper">
+      <figure>
+        <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a> 
+      </figure>
 
+      <div class="header-divider"></div>
+  
+      <nav>
+        <ul>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
+          <li><a href="../index.html" target="_blank">Home</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="faq">
+      <div class="content-wrapper">
+        <h2>Frequently Asked Questions.</h2>
+
+        <article>
+          <h3>How do I get to the Unplugged retreat?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
+        </article> 
+
+        <article>
+          <h3>What kind of team is right for the Unplugged retreat?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
+        </article> 
+
+        <article>
+          <h3>What size teams can you accommodate?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
+        </article> 
+        
+        <article>
+          <h3>Is there really no wifi available?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
+        </article> 
+
+      </div>
+    </section>
+
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
+          <div class="contact">
+            <h3>Contact</h3>
+            <address> 555.555.5555 <br> hello@unplugged.com</address>
+          </div>
+          <div class="social">
+            <h3>Social</h3>
+            <div class="social-icons">
+              <p><a href="https://wwww.facebook.com/yoursite" target="blank"></a></p>
+              <p><a href="https://www.twitter.com/yoursite" target="blank"></a></p>
+              <p><a href="https://www.instagram.com/yoursite" target="blank"></a></p>
+            </div>  <!-- end of social icons-->
+          </div>  <!-- end of social-->
+        </div>  <!--end of footer-content-->
+      </div>  <!--end of content-wrapper-->
+  
+      <div class="copyright">
+        <p>Copyright 2019&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;Unplugged</p>
+      </div>
+    </footer>
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
