--- a/about/index.html
+++ b/about/index.html
@@ -23,6 +23,70 @@
 </head>
 
 <body>
+<header>
+    <div class="content-wrapper">
+      <figure>
+        <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a> 
+      </figure>
+
+      <div class="header-divider"></div>
+  
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../index.html" target="_blank">Home</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="mission">
+      <div class="content-wrapper">
+        <div class="mission=content"</div>
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
+      </div>
+    </section>
+
+    <section class="map">
+      <div class="content-wrapper">
+        <figure>INSERT MAP HERE </figure>
+      </div>
+    </section>
+
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+        <h3>General Information</h3>
+        <address>333 Main St., Lake Geneva, WI 53147 <br> 555.555.5555 <br> hello@unplugged.com</address>
+        <h3>Chat with a Facilitator</h3>
+        <address> 555.555.5555 <br>facilitator@unplugged.com</address>
+      </div>
+    </section>
+  </main>
+<footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h3>Contact</h3>
+          <address> 555.555.5555 <br> hello@unplugged.com</address>
+        </div>
+        <div class="social">
+          <h3>Social</h3>
+          <div class="social-icons">
+            <p><a href="https://wwww.facebook.com/yoursite" target="blank"></a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="blank"></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="blank"></a></p>
+          </div>  <!-- end of social icons-->
+        </div>  <!-- end of social-->
+      </div>  <!--end of footer-content-->
+    </div>  <!--end of content-wrapper-->
+
+    <div class="copyright">
+      <p>Copyright 2019&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;Unplugged</p>
+    </div>
+  </footer>
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
