--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
   <main>
     <section class="mission">
       <div class="content-wrapper">
-        <div class="mission=content"</div>
+        <div class="mission-content"</div>
         <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
       </div>
