--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a> 
       </figure>
 
-      <div class="header-divider"></div>
+      <div class="header-divider">
+        <hr class="solid">
+      </div>
   
       <nav>
         <ul>
@@ -100,7 +102,7 @@
           <article> 
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-          </article>  <!-- insert icons and text -->
+          </article>  
         </div>
       </div>
     </section>
