--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section class="hero-area">
       <div class="content-wrapper">
         <figure>
-         <!--- <a href="bridge"><img src="img/jake-melara-30679-unsplash.jpg" alt="woman with ponytail crossing bridge"></a>  -->
+        <!---- <a href="bridge"><img src="img/jake-melara-30679-unsplash.jpg" alt="woman with ponytail crossing bridge"></a> --->
         </figure>
         <h1>Retreat from the desk, return refreshed.</h1>
       </div>
@@ -62,7 +62,7 @@
         <div class="form">
           <h3>Find out more</h3> 
           <input type="text" name="name" value="email address">&nbsp;&nbsp;
-          <input type="button" value="Download Itinerary">
+          <input type="button" value="DOWNLOAD ITINERARY">
         </div>
 
       </div> <!--aside content wrapper ends -->
@@ -117,7 +117,7 @@
         </figure>
 
         <div class="review-lacrue">
-          <h3>LaCrue Bottling Co. October 2017</h3>
+          <h3>LaCrue Bottling Co.<br> October 2017</h3>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas congue quisque egestas diam in. Porttitor eget dolor morbi non arcu. Commodo odio aenean sed adipiscing. Non tellus orci ac auctor. Interdum posuere lorem ipsum dolor. Justo laoreet sit amet cursus sit amet dictum. Amet consectetur adipiscing elit duis tristique sollicitudin nibh sit. </p>
         </div>
       </article>
