CSS Widths, Margins and padding

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <div class="form">
           <h3>Find out more</h3> 
-          <input type="text" name="name" value="email address">&nbsp;&nbsp;
+          <input type="email" name="name" value="name@email.com">&nbsp;&nbsp;
           <input type="button" value="DOWNLOAD ITINERARY">
         </div>
 
@@ -73,7 +73,7 @@
         <figure>
         <!--   <a href="nature"><img src="img/rawpixel-800820-unsplash1.jpg" alt="Five people sitting in a circle on mats on the ground cooking an egg on a campstove."></a>  -->
         </figure>
-          <h4>Have the work week you always dreamed of - without the bad wifi.</h4>
+          <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
           <article>
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -117,7 +117,7 @@
         </figure>
 
         <div class="review-lacrue">
-          <h3>LaCrue Bottling Co.<br> October 2017</h3>
+          <h3>LaCrue Bottling Co. October 2017</h3>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas congue quisque egestas diam in. Porttitor eget dolor morbi non arcu. Commodo odio aenean sed adipiscing. Non tellus orci ac auctor. Interdum posuere lorem ipsum dolor. Justo laoreet sit amet cursus sit amet dictum. Amet consectetur adipiscing elit duis tristique sollicitudin nibh sit. </p>
         </div>
       </article>
