Font and background color

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
+          <li><a href="faq/index.html" target="_blank" style="color: #e2e3ed;">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank" style="color: #e2e3ed;">About</a></li>
         </ul>
       </nav>
     </div>
@@ -117,7 +117,7 @@
         </figure>
 
         <div class="review-lacrue">
-          <h3>LaCrue Bottling Co. October 2017</h3>
+          <h3>LaCrue Bottling Co. <br> October 2017</h3>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas congue quisque egestas diam in. Porttitor eget dolor morbi non arcu. Commodo odio aenean sed adipiscing. Non tellus orci ac auctor. Interdum posuere lorem ipsum dolor. Justo laoreet sit amet cursus sit amet dictum. Amet consectetur adipiscing elit duis tristique sollicitudin nibh sit. </p>
         </div>
       </article>
