--- a/about/index.html
+++ b/about/index.html
@@ -29,12 +29,14 @@
         <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a> 
       </figure>
 
-      <div class="header-divider"></div>
+      <div class="header-divider">
+        <hr class="solid">
+      </div>
   
       <nav>
         <ul>
-          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="../index.html" target="_blank">Home</a></li>
+          <li><a href="faq/index.html" target="_blank" style="color: #e2e3ed;">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank" style="color: #e2e3ed;">About</a></li>
         </ul>
       </nav>
     </div>
@@ -45,7 +47,8 @@
       <div class="content-wrapper">
         <div class="mission-content"</div>
         <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus.</P>
+        <P>Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
       </div>
     </section>
 
@@ -57,11 +60,15 @@
 
     <section class="contact-section">
       <div class="content-wrapper">
-        <h2>Contact us, because you all need this.</h2>
-        <h3>General Information</h3>
-        <address>333 Main St., Lake Geneva, WI 53147 <br> 555.555.5555 <br> hello@unplugged.com</address>
-        <h3>Chat with a Facilitator</h3>
-        <address> 555.555.5555 <br>facilitator@unplugged.com</address>
+       <h2>Contact us, because you all need this.</h2>
+        <div class="general-contact">
+          <h3>General Information</h3>
+          <address>333 Main St., Lake Geneva, WI 53147 <br> 555.555.5555 <br> <a href="mailto:hello@unplugged.com">hello@unplugged.com</a></address>
+        </div>
+        <div class="facilitator-contact" > 
+          <h3>Chat with a Facilitator</h3>
+          <address> 555.555.5555 <br><a href="mailto:facilitator@unplugged.com">facilitator@unplugged.com</a></address>
+        </div>
       </div>
     </section>
   </main>
