--- a/faq/index.html
+++ b/faq/index.html
@@ -29,12 +29,14 @@
         <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a> 
       </figure>
 
-      <div class="header-divider"></div>
+      <div class="header-divider">
+        <hr class="solid">
+      </div>
   
       <nav>
         <ul>
-          <li><a href="../about/index.html" target="_blank">About</a></li>
-          <li><a href="../index.html" target="_blank">Home</a></li>
+          <li><a href="faq/index.html" target="_blank" style="color: #e2e3ed;">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank" style="color: #e2e3ed;">About</a></li>
         </ul>
       </nav>
     </div>
@@ -47,22 +49,22 @@
 
         <article>
           <h3>How do I get to the Unplugged retreat?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Cras nec nulla sit amet nulla mollis elementum.</p>
         </article> 
 
         <article>
           <h3>What kind of team is right for the Unplugged retreat?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Cras nec nulla sit amet nulla mollis elementum.</p>
         </article> 
 
         <article>
           <h3>What size teams can you accommodate?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. </p>
         </article> 
         
         <article>
           <h3>Is there really no wifi available?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. Proin massa risus, suscipit sit amet diam vitae, suscipit facilisis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sapien nibh, pulvinar dapibus malesuada consequat, malesuada placerat mauris. Duis ullamcorper tortor at dolor sodales, eget rutrum mi laoreet. Donec diam sem, lacinia sit amet massa eu, tincidunt semper elit. Fusce facilisis egestas laoreet. Aenean viverra lorem sit amet auctor pellentesque. Cras nec nulla sit amet nulla mollis elementum.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec tempor ligula. Nam sit amet nisi leo. Nunc vestibulum, arcu vel fermentum consectetur, quam libero ornare lorem, at rutrum nibh sem et dui. Phasellus accumsan justo at enim bibendum, vitae commodo lacus porta. Ut id nunc eget ex semper elementum in eu ante. </p>
         </article> 
 
       </div>
