text styles final

--- a/about/index.html
+++ b/about/index.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
 
 <body>
@@ -35,8 +38,8 @@
   
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank" style="color: #e2e3ed;">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank" style="color: #e2e3ed;">About</a></li>
+          <li><a href="../faq/index.html" target="_blank" style="color: #e2e3ed;">FAQ </a> </li>
+          <li><a href="about/index.html" target="_blank" style="color: #e2e3ed;">ABOUT </a> </li>
         </ul>
       </nav>
     </div>
@@ -62,11 +65,11 @@
       <div class="content-wrapper">
        <h2>Contact us, because you all need this.</h2>
         <div class="general-contact">
-          <h3>General Information</h3>
+          <h4>General Information</h4>
           <address>333 Main St., Lake Geneva, WI 53147 <br> 555.555.5555 <br> <a href="mailto:hello@unplugged.com">hello@unplugged.com</a></address>
         </div>
         <div class="facilitator-contact" > 
-          <h3>Chat with a Facilitator</h3>
+          <h4>Chat with a Facilitator</h4>
           <address> 555.555.5555 <br><a href="mailto:facilitator@unplugged.com">facilitator@unplugged.com</a></address>
         </div>
       </div>
