--- a/faq/index.html
+++ b/faq/index.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
 
 <body>
@@ -36,7 +39,7 @@
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank" style="color: #e2e3ed;">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank" style="color: #e2e3ed;">About</a></li>
+          <li><a href="../about/index.html" target="_blank" style="color: #e2e3ed;">ABOUT</a></li>
         </ul>
       </nav>
     </div>
