--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
 
 <body>
@@ -36,7 +39,7 @@
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank" style="color: #e2e3ed;">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank" style="color: #e2e3ed;">About</a></li>
+          <li><a href="about/index.html" target="_blank" style="color: #e2e3ed;">ABOUT</a></li>
         </ul>
       </nav>
     </div>
@@ -74,6 +77,7 @@
         <!--   <a href="nature"><img src="img/rawpixel-800820-unsplash1.jpg" alt="Five people sitting in a circle on mats on the ground cooking an egg on a campstove."></a>  -->
         </figure>
           <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+        
           <article>
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
