text styles finessed again

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="form">
           <h3>Find out more</h3> 
           <input type="email" name="name" value="name@email.com">&nbsp;&nbsp;
-          <input type="button" value="DOWNLOAD ITINERARY">
+          <input type="button" value="download itinerary">
         </div>
 
       </div> <!--aside content wrapper ends -->
