Optimized photo sizes

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   <main>
     <section class="hero-area">
       <div class="content-wrapper">
-        <figure>
-        <!---- <a href="bridge"><img src="img/jake-melara-30679-unsplash.jpg" alt="woman with ponytail crossing bridge"></a> --->
-        </figure>
+        <!---- <figure>
+        <a href="bridge"><img src="img/jake-melara-30679-unsplash.jpg" alt="woman with ponytail crossing bridge">
+        </figure>  </a> --->
         <h1>Retreat from the desk, return refreshed.</h1>
       </div>
     </section>
