Image Optimization Take 2

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
     <section class="features">
       <div class="content-wrapper">
-        <figure>
-        <!--   <a href="nature"><img src="img/rawpixel-800820-unsplash1.jpg" alt="Five people sitting in a circle on mats on the ground cooking an egg on a campstove."></a>  -->
-        </figure>
+        <!--<figure>
+           <a href="nature"><img src="img/rawpixel-800820-unsplash1.jpg" alt="Five people sitting in a circle on mats on the ground cooking an egg on a campstove."></a> 
+        </figure>   -->
           <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
         
           <article>
@@ -117,7 +117,7 @@
       <h2>Be a better team in 5 days, like these.</h2>
       <article>
         <figure>
-        <!--   <a href="group"><img src="img/omar-lopez-296944-unsplash.jpg" alt="Group of 10 young women posing for photo in nature."></a>  -->
+          <a href="group"><img src="img/omar-lopez-296944-unsplash.jpg" alt="Group of 10 young women posing for photo in nature."></a>
         </figure>
 
         <div class="review-lacrue">
