Maps Optimized Across All Screens

--- a/about/index.html
+++ b/about/index.html
@@ -56,8 +56,8 @@
     </section>
 
     <section class="map">
-      <div class="content-wrapper">
-        <figure>INSERT MAP HERE </figure>
+      <div class="map-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3179.9139373930475!2d-122.35054378500601!3d37.15474585536161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808e5564570152db%3A0x488b75e484e38cf1!2sSanta%20Cruz%20North%20%2F%20Costanoa%20KOA!5e0!3m2!1sen!2sus!4v1615304915670!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
     </section>
 
