--- a/about/index.html
+++ b/about/index.html
@@ -23,6 +23,8 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <!-----FONT AWESOME KIT ------>
+  <script src="https://kit.fontawesome.com/b17f5d304d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
