--- a/about/index.html
+++ b/about/index.html
@@ -87,16 +87,19 @@
         <div class="social">
           <h3>Social</h3>
           <div class="social-icons">
-            <p><a href="https://wwww.facebook.com/yoursite" target="blank"></a></p>
-            <p><a href="https://www.twitter.com/yoursite" target="blank"></a></p>
-            <p><a href="https://www.instagram.com/yoursite" target="blank"></a></p>
+            <p><a href="https://wwww.facebook.com/yoursite" target="blank"><i class="fab fa-facebook"></i></a>
+            </p>
+            <p><a href="https://www.twitter.com/yoursite" target="blank"><i class="fab fa-twitter"></i></a>
+            </p>
+            <p><a href="https://www.instagram.com/yoursite" target="blank"><i class="fab fa-instagram"></i></a>
+            </p>
           </div>  <!-- end of social icons-->
         </div>  <!-- end of social-->
       </div>  <!--end of footer-content-->
     </div>  <!--end of content-wrapper-->
 
     <div class="copyright">
-      <p>Copyright 2019&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;Unplugged</p>
+      <p><i class="far fa-copyright"></i>&nbsp;&nbsp;Copyright 2019&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;Unplugged</p>
     </div>
   </footer>
 
