--- a/faq/index.html
+++ b/faq/index.html
@@ -31,7 +31,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a> 
+        <a href="../index.html"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a> 
       </figure>
 
       <div class="header-divider">
